--- a/api/h5/templates/wine1.html
+++ b/api/h5/templates/wine1.html
@@ -3,12 +3,12 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>活动</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>
-		<link rel="stylesheet" type="text/css" href="css/css.css"/>
-		<script src="js/jQuery v1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
+		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/css.css"/>
+		<script src="../js/jQuery%20v1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
-		<img width="100%" class="leftt" src="img/banner.png" alt="" />
+		<img width="100%" class="leftt" src="../img/banner.png" alt="" />
 		<div class="wine_1" style="padding-bottom: 20px">
 			<p>2016年10月1日，酒侬花堡红酒品现场鉴活动 现场--一款酒好不好喝，只有你说了算。</p>
 			<p>2016年8月16日，酒侬花堡公司组织俱乐部成员参加了花堡酒庄一日游的活动，并与众俱乐部成员一同参与了品鉴。品酒师介绍了酒庄的历史和红酒文化。。。</p>
@@ -22,5 +22,5 @@
 		</div>
 		<!--弹框-->
 	</body>
-	<script src="js/js.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../js/js.js" type="text/javascript" charset="utf-8"></script>
 </html>
