--- a/api/h5/templates/wine1.html
+++ b/api/h5/templates/wine1.html
@@ -3,24 +3,24 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>活动</title>
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/css.css"/>
-		<script src="../js/jQuery%20v1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
+		<link rel="stylesheet" type="text/css" href="/api/h5/css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="/api/h5/css/css.css"/>
+		<script src="/api/h5/js/jQuery%20v1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
-		<img width="100%" class="leftt" src="../img/banner.png" alt="" />
+		<img width="100%" class="leftt" src="/api/h5/img/banner.png" alt="" />
 		<div class="wine_1" style="padding-bottom: 20px">
-			<p>2016年10月1日，酒侬花堡红酒品现场鉴活动 现场--一款酒好不好喝，只有你说了算。</p>
-			<p>2016年8月16日，酒侬花堡公司组织俱乐部成员参加了花堡酒庄一日游的活动，并与众俱乐部成员一同参与了品鉴。品酒师介绍了酒庄的历史和红酒文化。。。</p>
+			<p>{$data->description}</p>
+			<p>{$data->content}</p>
 			<h2>动态简介</h2>
-			<div class="wine_1_div">主题：酒庄一日游</div>
-			<div class="wine_1_div">日期和时间：2016年10月10日</div>
-			<div class="wine_1_div">预计时长：2小时</div>
-			<div class="wine_1_div">参与人数：20人</div>
-			<div class="wine_1_div">主办方：酒浓花堡有限公司</div>
-			<div class="wine_1_div">活动地点：酒侬堡</div>
+			<div class="wine_1_div">主题：{$data->title}</div>
+			<div class="wine_1_div">日期和时间：{$data->date_range} {$data->time_range}</div>
+			<div class="wine_1_div">预计时长：{$data->time_range}</div>
+			<div class="wine_1_div">参与人数：{$data->num}人</div>
+			<div class="wine_1_div">主办方：{$data->sponsor}</div>
+			<div class="wine_1_div">活动地点：{$data->address}</div>
 		</div>
 		<!--弹框-->
+		<script src="/api/h5/js/js.js" type="text/javascript" charset="utf-8"></script>
 	</body>
-	<script src="../js/js.js" type="text/javascript" charset="utf-8"></script>
 </html>
